testing/framework/resources/Functional/Failing/sandbox/logs/4.e_tsv
 2013	2	12115	02/23/2013	19:48:24	3	IOS5	az	5	who's	6	false	
 2013	2	12127	02/26/2013	19:42:03	11459	IOS5	wa	10	for	331	false	
 2013	2	12138	02/09/2013	05:49:01	1	IOS6	ca	7	minutes	500	false	
 2013	2	12139	02/23/2013	06:58:20	1	AOS4.4	ms	7	i	20	false	
 2013	2	12145	02/10/2013	10:14:56	10	IOS5	mi	6	wrong	42	false	
 2013	2	12157	02/15/2013	02:49:22	102	IOS5	ny	5	want	95	false	
 2013	2	12176	02/19/2013	08:39:02	28	IOS5	or	0	and	351	false	
 2013	2	12194	02/24/2013	08:26:17	125445	IOS5	ar	0	say	500	true	
 2013	2	12236	02/05/2013	01:40:05	10	IOS5	nj	2	sir	393	false	
 2013	2	12249	02/03/2013	04:45:47	21725	IOS5	nj	5	no	414	false	
